2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui.mdp, DocumentTab.cs: Added DocumentTab that
	  represents a "Tab" ie a ScrolledWindow with an associated
	  DocumentEditor.
	* DocumentEditor.cs: Added a helper method to initialize several
	  properties for the DocumentEditor.

2007-06-25  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentTagTable.cs: Adding more tag for missing elements and
	  attributes.
	* DocumentBuffer.cs: Use Instance call so only one DocumentTagTable is
	  created at any time.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentTagTable.cs, DocumentTag.cs: Deleted HasText property.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Changed Serialize to use the new attribute
	  IsText and the new associated tags to serialize the buffer.
	* DocumentTagTable.cs: Adding *:Text tags that represents patches of
	  text inside a element.
	* DocumentTag.cs: Added a enum that functions as a bit mask, new
	  properties are: IsSerializable, IsElement, IsAttribute and IsText.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Abstracting the several
	  Deserialize*Attributes moethods.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Minor changes in the tests.

2007-06-23  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Iterate over all XML files inside
	  Examples directory. Added perfomance test for Deserialize and
	  Serialize methods.
	* DocumentBufferArchiver.cs: Minor Change.
	* Monodoc.Editor.Gui.mdp, Test/Examples/WindowType.xml: Added
	  WindowType document XML for tests.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/Examples/WrapMode.xml: Added markup for empty elements
	* DocumentBufferArchiver.cs: Added case in Deserialize for empty
	  elements.
