@@ -1,3 +1,10 @@
+2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* Test/TestDocumentBufferArchiver.cs: Minor changes to get the name of
+	  the document when one assert fails.
+	* DocumentBufferArchiver.cs: Added an ad-hoc try-catch block to get
+	  missing elements while deserializing.
+
 2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* Monodoc.Editor.Gui.mdp, DocumentTab.cs: Added DocumentTab that
